    * Implemented entity features for orders:
        - Added $reset parameter to uc_order_load().
        - Added uc_order_load_multiple().
        - Fields saved and loaded.
    * Order pane callbacks also changed signatures:
      uc_order_pane_PANE_ID($op, $order, &$form = NULL, &$form_state = NULL)
        - This signature applies to all ops, including those defined in
          'edit-ops'.
- Forms:
    * Submit buttons wrapped in a #type = actions container.
    * Edit order form now contains field widgets.

Ubercart 3.0-alpha3, 2010-07-16
-------------------------------
- API:
    * Dropped Conditional Actions.
    * Integrated with Rules.
    * Product features:
        - Added uc_product_feature_load_multiple().
        - Added uc_product_feature_load().
        - Added uc_product_feature_delete().
- Theme:
    * Ported order invoice templates to new token names.

Ubercart 3.0-alpha2, 2010-06-11
-------------------------------
- API:
    * Changed payment method callback signature:
      uc_payment_method_METHOD($op, &$order, $form = NULL, &$form_state = NULL)
    * Changed checkout pane callback signature:
      uc_checkout_pane_PANE_ID($op, &$order, $form = NULL, &$form_state = NULL)
    * Use $form_state['values']['panes'][PANE_ID] instead of $arg2 during the
      'process' $op.
    * New UcAddress class to initialize address data.
    * New UcOrder class to initialize order data.
    * Most of uc_order.js, uc_payment.js, uc_quote.js, and uc_taxes.js removed
      in favor of Form API AJAX integration.
    * Removed uc_order_edit_products_form() in favor of AJAX processing.
    * uc_payment_get_totals() is now an AJAX callback.
    * _uc_quote_assemble_quotes() renamed to uc_quote_assemble_quotes()
    * Removed uc_quote_request_quotes().
    * uc_product_feature_save() now takes $data as a reference.
    * Editing and adding products to orders now use AJAX, so nearly all
      functions in that process have been replaced, removed, or reused.