@@ -231,7 +231,7 @@ function uc_flatrate_quote($products, $details, $method) {
       }
     }
 
-    $quotes[] = array('rate' => $rate, 'format' => uc_currency_format($rate), 'option_label' => check_plain($method->label));
+    $quotes[] = array('rate' => $rate, 'option_label' => check_plain($method->label));
   }
 
   return $quotes;
