@@ -865,7 +865,6 @@ function uc_ups_quote($products, $details) {
   foreach ($quotes as $key => $quote) {
     if (isset($quote['rate'])) {
       $quotes[$key]['rate'] = $quote['rate'];
-      $quotes[$key]['format'] = uc_currency_format($quote['rate']);
       $quotes[$key]['option_label'] = theme('uc_ups_option_label', array('service' => $method['ups']['quote']['accessorials'][$key]));
     }
   }
