@@ -355,7 +355,6 @@ function uc_usps_quote($products, $details, $method) {
   foreach ($services as $key => $quote) {
     if (isset($quote['rate'])) {
       $services[$key]['rate'] = $quote['rate'];
-      $services[$key]['format'] = uc_currency_format($quote['rate']);
       $services[$key]['option_label'] = theme('uc_usps_option_label', array('service' => $quote['label']));
     }
   }
