@@ -230,7 +230,7 @@ function uc_weightquote_quote($products, $details, $method) {
       $rate += $product_rate  * $product->weight * uc_weight_conversion($product->weight_units, variable_get('uc_weight_unit', 'lb'));
     }
 
-    $quotes[] = array('rate' => $rate, 'format' => uc_currency_format($rate), 'option_label' => check_plain($method->label));
+    $quotes[] = array('rate' => $rate, 'option_label' => check_plain($method->label));
   }
 
   return $quotes;
