@@ -11,6 +11,7 @@ Ubercart 3.x, xxxx-xx-xx (development version)
       uc_order_pane_PANE_ID($op, $order, &$form = NULL, &$form_state = NULL)
         - This signature applies to all ops, including those defined in
           'edit-ops'.
+    * Quote method callbacks no longer need to return formatted rates.
 - Forms:
     * Submit buttons wrapped in a #type = actions container.
     * Edit order form now contains field widgets.
